--- a/master.css
+++ b/master.css
@@ -286,7 +286,8 @@ td.pane:first-of-type, tr.build-row > td:first-of-type, th.pane:first-of-type {
 }
 
 form {
-    clear: both;
+    /* In project page this lime is making some bad thing */
+    /* clear: both;  */
 }
 
 .pane-header, .pane-header > a {
